# HelloCMake

./: CMakeLists.txt  README.md  version.h.in
cmake-modules/: FindthirdA.cmake
cmake/modules/: FindthirdA.cmake
main/: CMakeLists.txt  Hello.cpp
resource/: CMakeLists.txt  ReadMe.md
src/: Hello.cpp
